web-infras/parser/tests/fixtures/babel/es2015/uncategorised/248/output.txt
[SyntaxError]: duplicate params (1,19)
1|"use strict"; (a, a) => 42
 |                 ^
